--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BJ Front-End Dev</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
 
@@ -17,7 +17,7 @@
 
 <nav class="navbar navbar-expand-lg " style="background-color: #000000;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"> <img id="logo-bj" src="LogoBJ.png" alt="" width="66" height="24" class="d-inline-block align-text-medium">
+      <a class="navbar-brand" href="index.html"> <img id="logo-bj" src="images/LogoBJ.png" alt="" width="66" height="24" class="d-inline-block align-text-medium">
       </a>
       <button class="navbar-toggler" style="background-color: #9f35fe; border-color: #20a4fe;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -44,6 +44,44 @@
   </nav>
 
 
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/htmlcsssjs.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="images/bootstrap.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="images/jquery.jpg" class="d-block w-100" alt="...">
+      </div>
+  
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+
+
+
+
+    </button>
+  </div>
+<div class="texto">
+  <h2 style="color: black;">SKILLS</h2>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi ullam recusandae, saepe eveniet aliquam repudiandae culpa dicta, iure optio, adipisci fugit deleniti error consequuntur blanditiis earum magnam suscipit mollitia quo!</p>
+</div>
+
+<div> 
+  <h1>About Me</h1>
+  <p>My name is <span style="color:#9f35fe">Benjamin Jorquera</span>, I am currently 21 years old, I am studying computer engineering, I am training as a front-end developer, at the top you can see my current skills in this branch of web development  </p>
+</div>
+  
+
+
 
 
 
@@ -53,7 +91,7 @@
 
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="script.js" ></script>
+    <script src="js/script.js" ></script>
 
   </body>
 
