--- a/IHYWT.html
+++ b/IHYWT.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BJ Front-End Dev</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
 
@@ -16,7 +16,7 @@
     </header>
 <nav class="navbar navbar-expand-lg " style="background-color: #000000;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"> <img id="logo-bj" src="LogoBJ.png" alt="" width="66" height="24" class="d-inline-block align-text-medium">
+      <a class="navbar-brand" href="index.html"> <img id="logo-bj" src="images/LogoBJ.png" alt="" width="66" height="24" class="d-inline-block align-text-medium">
       </a>
       <button class="navbar-toggler" style="background-color: #9f35fe; border-color: #20a4fe;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -47,12 +47,19 @@
 
 
 
+  
+
+
+
+
+
+
 
 
 
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="script.js" ></script>
+    <script src="js/script.js" ></script>
 
   </body>
 
