--- a/index.html
+++ b/index.html
@@ -1,48 +1,146 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BJ Front-End Dev</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-  </head>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>BJ Front-End Dev</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
 
 
-  <body>
-<header class="container-fluid bg-dark d-flex justify-content-center" >
-    <p class="text-light mb-0 p-2 fs-6">Benjamin Jorquera -> Front-end Developer</p>
-</header>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg " style="background-color: #000000;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"> <img id="logo-bj" src="images/LogoBJ.png" alt="" width="66"
+            height="24" class="d-inline-block align-text-medium">
+        </a>
+        <button class="navbar-toggler" style="background-color: #9f35fe; border-color: #20a4fe;" type="button"
+          data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-2">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html" style="color: white ;">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="About.html" style="color: white ;">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Portfolio.html" style="color: white ;">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Contact.html" style="color: white ;">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="IHYWT.html" style="color: white ;">IHYWT</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-<nav class="navbar navbar-expand-lg " style="background-color: #000000;">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"> <img id="logo-bj" src="LogoBJ.png" alt="" width="66" height="24" class="d-inline-block align-text-medium">
-      </a>
-      <button class="navbar-toggler" style="background-color: #9f35fe; border-color: #20a4fe;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-2">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html" style="color: white ;">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="About.html" style="color: white ;">About Me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Portfolio.html" style="color: white ;">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Contact.html" style="color: white ;">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="IHYWT.html" style="color: white ;">IHYWT</a>
-          </li>
-        </ul>
-      </div>  
+
+
+  <div class="container">
+  
+    <section id="hero">
+      <h1>Benjamin Jorquera <br>Front-End Web Developer</h1>
+    </section>
+
+    <section id="Fully-responsive">
+      <div class="container">
+        <div class="img-container"></div>
+        <div class="texto">
+
+          <h2><span style="color: #20a4fe;">Fully responsive</span> <span style="color: #9f35fe;"  >and creative design websites</span></h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit veritatis a autem sed dignissimos
+            commodi, voluptas incidunt voluptatibus cum, quia neque nulla consequatur laborum accusamus, perspiciatis
+            odio nemo minus vel!</p>
+        </div>
+      </div>
+    </section>
+
+
+    <div class="row btn-pull-right">
+      <div class="col-md-offset-3 col-md-9 col-md-offset-4 col-md-8"><a id="btn1"   class="btn btn-primary btn-block" role="button"
+          href="Portfolio.html" title="portfolio">Go to Portfolio</a></div>
     </div>
-  </nav>
+  </div> 
+  </div> 
+  </div> 
+
+ 
+  <div id="cards"  class="row">
+
+    <div id="targets" class="item col-md-4 col-md-4 margin-top">
+      <div class="wrapper text-center">
+        <div class="row">
+          <div class="col-md-offset-3 col-md-6 col-md-offset-3 col-md-6 col-md-offset-3 col-md-6 margin-top"><img
+              id="cardimg" class="img-center img-responsive margin-top icon" src="images/profile-user.png"
+              alt="about me" /></div>
+        </div>
+        <h3 class="margin-bottom">About Me</h3>
+        <p>Know about Me, my Jobs and Skills</p>
+        <div class="row btn-pull-up">
+          <div class="col-md-offset-3 col-md-9 col-md-offset-3 col-md-9"><a class="btn btn-primary btn-block"
+              role="button" href="About.html">Go to About Me</a></div>
+        </div>
+      </div>
+    </div>
+
+
+    <div id="targets" class="item col-md-4 col-md-4 margin-top">
+      <div class="wrapper text-center">
+        <div class="row">
+          <div class="col-md-offset-3 col-md-6 col-md-offset-3 col-md-6 col-md-offset-3 col-md-6 margin-top"><img
+              id="cardimg" class="img-center img-responsive margin-top icon" src="images/email-envelope.png"
+              alt="contact" /></div>
+        </div>
+        <h3 class="margin-bottom">Contact</h3>
+        <p>Let's talk about your projects.
+        </p>
+        <div class="row btn-pull-up">
+          <div class="col-md-offset-3 col-md-9 col-md-offset-3 col-md-9"><a class="btn btn-primary btn-block"
+              role="button" href="Contact.html">Go to Contact</a></div>
+        </div>
+      </div>
+    </div>
+
+
+    <div id="targets" class="item col-md-4 col-md-4 margin-top">
+      <div class="wrapper text-center">
+        <div class="row">
+          <div class="col-md-offset-3 col-md-6 col-md-offset-3 col-md-6 col-md-offset-3 col-md-6 margin-top"><img
+              id="cardimg" class="img-center img-responsive margin-top icon" src="images/teamwork.png"
+              alt="i help you with that" /></div>
+        </div>
+        <h3 class="margin-bottom">I Help You With That</h3>
+        <p> A section dedicated to mutual help, you can ask questions and help others solve theirs </p>
+        <div class="row btn-pull-up">
+          <div class="col-md-offset-3 col-md-9 col-md-offset-3 col-md-9"><a class="btn btn-primary btn-block"
+              role="button"
+              href="IHYWT.html">Go to
+              IHYWT</a></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
+
+  <footer>
+    <div class="container">
+      <p>&copy; Benjamin Jorquera 2022</p>
+    </div>
+  </footer>
 
 
 
@@ -52,10 +150,11 @@
 
 
 
-   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="script.js" ></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
 
-  </body>
+</body>
 
 </html>
