--- a/About.html
+++ b/About.html
@@ -1,85 +1,96 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BJ Front-End Dev</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>BJ Front-End Dev</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 
 
 
-  <body>
-<header >
-    <p> ABOUT ME </p>
-</header>
+<body>
 
-<nav class="navbar navbar-expand-lg " style="background-color: #000000;">
+  <nav class="navbar navbar-expand-lg " style="background-color: #000000;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"> <img id="logo-bj" src="images/LogoBJ.png" alt="" width="66" height="24" class="d-inline-block align-text-medium">
+      <a class="navbar-brand" href="index.html"> <img id="logo-bj" src="images/LogoBJ.png" alt="" width="66" height="24"
+          class="d-inline-block align-text-medium">
       </a>
-      <button class="navbar-toggler" style="background-color: #9f35fe; border-color: #20a4fe;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" style="background-color: #9f35fe; border-color: #20a4fe;" type="button"
+        data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-2">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="index.html" style="color: white ;">Home</a>
-            <li class="nav-item">
-              <a class="nav-link" href="About.html" style="color: white ;">About Me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Portfolio.html" style="color: white ;">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Contact.html" style="color: white ;">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="IHYWT.html" style="color: white ;">IHYWT</a>
-            </li>
+          <li class="nav-item">
+            <a class="nav-link" href="About.html" style="color: white ;">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Portfolio.html" style="color: white ;">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Contact.html" style="color: white ;">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="IHYWT.html" style="color: white ;">IHYWT</a>
+          </li>
         </ul>
-      </div>  
+      </div>
     </div>
   </nav>
 
-
-  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="images/htmlcsssjs.jpg" class="d-block w-100" alt="...">
+  <div class="about-wrapper">
+    <div class="about-left">
+      <div class="about-left-content">
+        <div>
+          <div class="shadow">
+            <div class="about-img">
+              <img src="images/profile-user.png" alt="about image">
+            </div>
+          </div>
+          <h2>Benjamin<br>Jorquera</h2>
+          <h3>Web Developer</h3>
+        </div>
+        <ul class="icons">
+          <li><i class="fab fa-twitter"></i></li>
+          <li><i class="fab fa-linkedin"></i></li>
+          <li><i class="fab fa-github"></i></li>
+        </ul>
       </div>
-      <div class="carousel-item">
-        <img src="images/bootstrap.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/jquery.jpg" class="d-block w-100" alt="...">
-      </div>
-  
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
 
 
+    <div class="about-right">
+      <h1>What's up<span>!</span></h1>
+      <h2>Here are some things about me</h2>
+      <div class="about-btns">
+        <form action="Portfolio.html">
+          <button class="btn" type="submit">Portfolio</button>
+        </form>
+        <form action="..">
+          <button class="btn" type="submit">Resume</button>
+        </form>
+      </div>
 
-
-    </button>
+      <div class="about-para">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, consectetur? Molestiae maxime eveniet itaque
+          labore tenetur voluptatibus minima, similique reiciendis corporis, cumque quo totam nobis praesentium maiores
+          quae accusantium voluptate.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos repudiandae quisquam cumque! Quaerat natus ea
+          laborum nulla sed minima obcaecati voluptate sunt, aut, labore officiis impedit? Aperiam dicta debitis quidem.
+        </p>
+      </div>
+    </div>
   </div>
-<div class="texto">
-  <h2 style="color: black;">SKILLS</h2>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi ullam recusandae, saepe eveniet aliquam repudiandae culpa dicta, iure optio, adipisci fugit deleniti error consequuntur blanditiis earum magnam suscipit mollitia quo!</p>
-</div>
-
-<div> 
-  <h1>About Me</h1>
-  <p>My name is <span style="color:#9f35fe">Benjamin Jorquera</span>, I am currently 21 years old, I am studying computer engineering, I am training as a front-end developer, at the top you can see my current skills in this branch of web development  </p>
-</div>
-  
 
 
 
@@ -89,10 +100,14 @@
 
 
 
-   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="js/script.js" ></script>
 
-  </body>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
+
+</body>
 
 </html>
