--- a/Contact.html
+++ b/Contact.html
@@ -5,27 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BJ Front-End Dev</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
 
 
   <body>
-    <header >
-        <p> CONTACT </p>
-    </header>
 
-<nav class="navbar navbar-expand-lg " style="background-color: #000000;">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"> <img id="logo-bj" src="images/LogoBJ.png" alt="" width="66" height="24" class="d-inline-block align-text-medium">
-      </a>
-      <button class="navbar-toggler" style="background-color: #9f35fe; border-color: #20a4fe;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-2">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html" style="color: white ;">Home</a>
+    <nav class="navbar navbar-expand-lg " style="background-color: #000000;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"> <img id="logo-bj" src="images/LogoBJ.png" alt="" width="66" height="24"
+            class="d-inline-block align-text-medium">
+        </a>
+        <button class="navbar-toggler" style="background-color: #9f35fe; border-color: #20a4fe;" type="button"
+          data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-2">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html" style="color: white ;">Home</a>
             <li class="nav-item">
               <a class="nav-link" href="About.html" style="color: white ;">About Me</a>
             </li>
@@ -38,11 +41,73 @@
             <li class="nav-item">
               <a class="nav-link" href="IHYWT.html" style="color: white ;">IHYWT</a>
             </li>
-        </ul>
-      </div>  
-    </div>
-  </nav>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
+    <div class="content">
+
+      <h1 class="logo">Contact <span>Me</span></h1>
+
+      <div class="contact-wrapper animated bounceInUp">
+          <div class="contact-form">
+
+              <form action="">
+                  <p>
+                      <label>Tell me your Name</label>
+                      <input type="text" name="fullname" id="fullname">
+                  </p>
+                  <p>
+                      <label>Do you have any Email?</label>
+                      <input type="email" name="email" id="email" >
+                  </p>
+                  <p>
+                      <label>Tell me your Phone Number</label>
+                      <input type="tel" name="phone" id="phone">
+                  </p>
+                  <p>
+                      <label>What is the Affair</label>
+                      <input type="text" name="affair" id="affair">
+                  </p>
+                  <p class="block">
+                     <label>Your Message</label> 
+                      <textarea name="message" id="message" rows="3"></textarea>
+                  </p>
+                  <p class="block">
+                      <button type="button" id="btnsend" class="button">
+                          Send to Benjamin
+                      </button>
+                  </p>
+              </form>
+          </div>
+          <div class="contact-info">
+              <h4>Contact Info</h4>
+              <ul>
+                  <li><i class="fas fa-map-marker-alt"></i> Santiago, Chile</li>
+                  <li><i class="fas fa-phone"></i> +569 34533169</li>
+                  <li><i class="fas fa-envelope-open-text"></i> bejorqueravilla@gmail.com</li>
+              </ul>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero provident ipsam necessitatibus repellendus?</p>
+              <p>lorem ipsum</p>
+          </div>
+      </div>
+
+  </div>
+  
+<section>
+  <div id="form-success" class="alert alert-success" role="alert" style="display: none;">
+    Your has been sent
+    <ul></ul>
+</div>
+
+<div id="form-mistake" class="alert alert-danger" role="alert" style="display: none;">
+  Error, the message was not sent
+    <ul></ul>
+</div>
+</section>
+
+  
 
 
 
@@ -53,7 +118,7 @@
 
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="js/script.js" ></script>
+    <script src="js/contacts.js" ></script>
 
   </body>
 
