--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <title>BJ Front-End Dev</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/home.css">
 </head>
 
 
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg " style="background-color: #000000;">
+    <nav class="navbar navbar-expand-md " style="background-color: #000000;">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"> <img id="logo-bj" src="images/LogoBJ.png" alt="" width="66"
             height="24" class="d-inline-block align-text-medium">
@@ -50,7 +50,7 @@
 
 
   <div class="container">
-  
+
     <section id="hero">
       <h1>Benjamin Jorquera <br>Front-End Web Developer</h1>
     </section>
@@ -59,81 +59,65 @@
       <div class="container">
         <div class="img-container"></div>
         <div class="texto">
-
-          <h2><span style="color: #20a4fe;">Fully responsive</span> <span style="color: #9f35fe;"  >and creative design websites</span></h2>
+          <h2><span style="color: rgb(32, 164, 254);">Fully responsive and creative design
+              Websites</span></h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit veritatis a autem sed dignissimos
             commodi, voluptas incidunt voluptatibus cum, quia neque nulla consequatur laborum accusamus, perspiciatis
             odio nemo minus vel!</p>
+          <form action="Portfolio.html">
+            <button type="submit">Portfolio</button>
+          </form>
         </div>
       </div>
+
+
     </section>
-
-
-    <div class="row btn-pull-right">
-      <div class="col-md-offset-3 col-md-9 col-md-offset-4 col-md-8"><a id="btn1"   class="btn btn-primary btn-block" role="button"
-          href="Portfolio.html" title="portfolio">Go to Portfolio</a></div>
-    </div>
-  </div> 
-  </div> 
-  </div> 
-
- 
-  <div id="cards"  class="row">
-
-    <div id="targets" class="item col-md-4 col-md-4 margin-top">
-      <div class="wrapper text-center">
-        <div class="row">
-          <div class="col-md-offset-3 col-md-6 col-md-offset-3 col-md-6 col-md-offset-3 col-md-6 margin-top"><img
-              id="cardimg" class="img-center img-responsive margin-top icon" src="images/profile-user.png"
-              alt="about me" /></div>
-        </div>
-        <h3 class="margin-bottom">About Me</h3>
-        <p>Know about Me, my Jobs and Skills</p>
-        <div class="row btn-pull-up">
-          <div class="col-md-offset-3 col-md-9 col-md-offset-3 col-md-9"><a class="btn btn-primary btn-block"
-              role="button" href="About.html">Go to About Me</a></div>
-        </div>
-      </div>
-    </div>
-
-
-    <div id="targets" class="item col-md-4 col-md-4 margin-top">
-      <div class="wrapper text-center">
-        <div class="row">
-          <div class="col-md-offset-3 col-md-6 col-md-offset-3 col-md-6 col-md-offset-3 col-md-6 margin-top"><img
-              id="cardimg" class="img-center img-responsive margin-top icon" src="images/email-envelope.png"
-              alt="contact" /></div>
-        </div>
-        <h3 class="margin-bottom">Contact</h3>
-        <p>Let's talk about your projects.
-        </p>
-        <div class="row btn-pull-up">
-          <div class="col-md-offset-3 col-md-9 col-md-offset-3 col-md-9"><a class="btn btn-primary btn-block"
-              role="button" href="Contact.html">Go to Contact</a></div>
-        </div>
-      </div>
-    </div>
-
-
-    <div id="targets" class="item col-md-4 col-md-4 margin-top">
-      <div class="wrapper text-center">
-        <div class="row">
-          <div class="col-md-offset-3 col-md-6 col-md-offset-3 col-md-6 col-md-offset-3 col-md-6 margin-top"><img
-              id="cardimg" class="img-center img-responsive margin-top icon" src="images/teamwork.png"
-              alt="i help you with that" /></div>
-        </div>
-        <h3 class="margin-bottom">I Help You With That</h3>
-        <p> A section dedicated to mutual help, you can ask questions and help others solve theirs </p>
-        <div class="row btn-pull-up">
-          <div class="col-md-offset-3 col-md-9 col-md-offset-3 col-md-9"><a class="btn btn-primary btn-block"
-              role="button"
-              href="IHYWT.html">Go to
-              IHYWT</a></div>
-        </div>
-      </div>
-    </div>
   </div>
-  </div>
+
+
+
+  <section id="more">
+    <div class="container">
+      <div class="mores">
+        <div class="carta">
+          <h3>About Me</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A expedita repellendus sint vel ex mollitia
+            quaerat
+            autem officiis fugit nostrum accusamus nobis perspiciatis eveniet, pariatur dicta natus porro at fuga!</p>
+          <form action="About.html">
+            <button>Go to About Me</button>
+          </form>
+
+        </div>
+        <div class="carta">
+          <h3>Contact</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A expedita repellendus sint vel ex mollitia
+            quaerat
+            autem officiis fugit nostrum accusamus nobis perspiciatis eveniet, pariatur dicta natus porro at fuga!</p>
+          <form action="Contact.html">
+            <button>Go to Contact</button>
+          </form>
+        </div>
+
+        <div class="carta">
+          <h3>I Help You With That</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A expedita repellendus sint vel ex mollitia
+            quaerat
+            autem officiis fugit nostrum accusamus nobis perspiciatis eveniet, pariatur dicta natus porro at fuga!</p>
+          <form action="IHYWT.html">
+            <button>Go to IHYWT</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+
+
+  </section>
+
+
+
+
 
 
   <footer>
