--- a/Contact.html
+++ b/Contact.html
@@ -55,19 +55,19 @@
 
               <form action="">
                   <p>
-                      <label>Tell me your Name</label>
+                      <label>Your Name</label>
                       <input type="text" name="fullname" id="fullname">
                   </p>
                   <p>
-                      <label>Do you have any Email?</label>
+                      <label>Email Address</label>
                       <input type="email" name="email" id="email" >
                   </p>
                   <p>
-                      <label>Tell me your Phone Number</label>
+                      <label>Phone Number</label>
                       <input type="tel" name="phone" id="phone">
                   </p>
                   <p>
-                      <label>What is the Affair</label>
+                      <label>Affair</label>
                       <input type="text" name="affair" id="affair">
                   </p>
                   <p class="block">
@@ -89,7 +89,7 @@
                   <li><i class="fas fa-envelope-open-text"></i> bejorqueravilla@gmail.com</li>
               </ul>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero provident ipsam necessitatibus repellendus?</p>
-              <p>lorem ipsum</p>
+              <p>ccotono.github.io/Portafolio1</p>
           </div>
       </div>
 
@@ -97,7 +97,6 @@
   
 <section>
   <div id="form-success" class="alert alert-success" role="alert" style="display: none;">
-    Your has been sent
     <ul></ul>
 </div>
 
