--- a/IHYWT.html
+++ b/IHYWT.html
@@ -5,15 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BJ Front-End Dev</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/ihywt.css">
   </head>
 
 
 
   <body>
-    <header >
-        <p> I HELP YOU WITH THAT </p>
-    </header>
+
 <nav class="navbar navbar-expand-lg " style="background-color: #000000;">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"> <img id="logo-bj" src="images/LogoBJ.png" alt="" width="66" height="24" class="d-inline-block align-text-medium">
