--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,25 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BJ Front-End Dev</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>BJ Front-End Dev</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/portfolio.css">
+</head>
 
 
 
-  <body>
-    <header >
-        <p> PORTFOLIO</p>
-    </header>
+<body>
 
-<nav class="navbar navbar-expand-lg " style="background-color: #000000;">
+
+  <nav class="navbar navbar-expand-lg " style="background-color: #000000;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"> <img id="logo-bj" src="images/LogoBJ.png" alt="" width="66" height="24" class="d-inline-block align-text-medium">
+      <a class="navbar-brand" href="index.html"> <img id="logo-bj" src="images/LogoBJ.png" alt="" width="66" height="24"
+          class="d-inline-block align-text-medium">
       </a>
-      <button class="navbar-toggler" style="background-color: #9f35fe; border-color: #20a4fe;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" style="background-color: #9f35fe; border-color: #20a4fe;" type="button"
+        data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -40,22 +43,65 @@
             <a class="nav-link" href="IHYWT.html" style="color: white ;">IHYWT</a>
           </li>
         </ul>
-      </div>  
+      </div>
     </div>
   </nav>
 
+  <section class="carousel">
+    <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active"
+          style="background-image:url('images/construction-web-template-flat-style_23-2147771970.jpg')">
+          <h1>Working</h1>
+          <h1>Working</h1>
+          <h1>Working</h1>
+        </div>
+        <div class="carousel-item">
+          <h1>PORTFOLIO</h1>
+          <h1>PORTFOLIO</h1>
+          <h1>PORTFOLIO</h1>
+        </div>
+        <div class="carousel-item">
+          <h1>MY WORKS</h1>
+          <h1>MY WORKS</h1>
+          <h1>MY WORKS</h1>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
+
+<div class="portfolio-text">
+<h1>The projects that I develop or the projects that I collaborate later will be posted on this site, I hope to see you here soon</h1>
+
+</div>
 
 
 
 
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
 
-
-
-   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="js/script.js" ></script>
-
-  </body>
+</body>
 
 </html>
